--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -3,15 +3,15 @@ import path from "node:path";
 import License from "@components/misc/License.astro";
 import Markdown from "@components/misc/Markdown.astro";
 
+import DiffDebugEditor from "@components/widget/DiffDebugEditor.astro";
+import PostDiffInArticle from "@components/widget/PostDiffInArticle.astro";
+import PostUpdateNotice from "@components/widget/PostUpdateNotice.astro";
 import MainGridLayout from "@layouts/MainGridLayout.astro";
 import { getSortedPosts } from "@utils/content-utils";
 import { getCommitUrl, getPostHistory } from "@utils/git-history";
 import { getDir, getPostUrlBySlug } from "@utils/url-utils";
 import { Icon } from "astro-icon/components";
 import { gitHubEditConfig, licenseConfig } from "src/config";
-import PostDiffInArticle from "@components/widget/PostDiffInArticle.astro";
-import DiffDebugEditor from "@components/widget/DiffDebugEditor.astro";
-import PostUpdateNotice from "@components/widget/PostUpdateNotice.astro";
 import PostMetadata from "../../components/PostMeta.astro";
 import ImageWrapper from "../../components/misc/ImageWrapper.astro";
 import { profileConfig, siteConfig, umamiConfig } from "../../config";
@@ -34,7 +34,8 @@ const { Content, headings } = await entry.render();
 const { remarkPluginFrontmatter } = await entry.render();
 
 const history = getPostHistory(entry.id);
-const lastUpdateTime = history[0]?.date || entry.data.updated || entry.data.published;
+const lastUpdateTime =
+	history[0]?.date || entry.data.updated || entry.data.published;
 
 const jsonLd = [
 	{
